--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MediaOne
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Admin\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jdatepicker-1.3.4.jar=C:\\Users\\Admin\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=D:\\codelearn\\openshop\\oop20212\\dist\\lib\\mysql-connector-java-5.1.48-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
